make sure messages don't overflow the right container when menu is in effect

--- a/frontend/app/src/styles/global.scss
+++ b/frontend/app/src/styles/global.scss
@@ -500,7 +500,7 @@ svelte-virtual-list-viewport {
     pointer-events: none;
     opacity: 0;
     &.visible {
-        opacity: 0.5;
+        opacity: 0.8;
     }
 }
 
